--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins
 {
-    id 'antlr'
     id 'java-library'
 }
 
@@ -8,8 +7,6 @@ java.toolchain.languageVersion = JavaLanguageVersion.of(11)
 
 dependencies
 {
-    antlr group: 'org.antlr', name: 'antlr4', version: '4.8'
-
     testImplementation platform(group: 'org.junit', name: 'junit-bom', version: '5.7.2')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
@@ -17,5 +14,11 @@ dependencies
 
 test.configure
 {
+    // properties
+    [
+        'br.dev.pedrolamarao.gdb.test.command',
+    ]
+    .each { p -> if (project.hasProperty(p)) systemProperty(p, project.property(p)) }
+
     useJUnitPlatform()
 }
