--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+pluginManagement
+{
+    plugins
+    {
+        id 'dev.gradleplugins.java-gradle-plugin' version '1.2'
+    }
+}
+
 dependencyResolutionManagement
 {
     repositories
@@ -5,3 +13,6 @@ dependencyResolutionManagement
         mavenCentral()
     }
 }
+
+include 'core'
+include 'gradle'
