--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,24 @@
 plugins
 {
     id 'base'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
+}
+
+group = 'br.dev.pedrolamarao.gdb'
+version = '1.0.0-SNAPSHOT'
+
+nexusPublishing
+{
+    repositories {
+        sonatype {
+            nexusUrl = uri("https://s01.oss.sonatype.org/service/local/")
+            snapshotRepositoryUrl = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/")
+        }
+    }
+}
+
+subprojects
+{
+    group = parent.group
+    version = parent.version
 }
