--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,9 +1,12 @@
 plugins
 {
     id 'java-library'
+    id 'maven-publish'
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
+java.withJavadocJar()
+java.withSourcesJar()
 
 dependencies
 {
@@ -14,6 +17,16 @@ dependencies
     testImplementation platform(group: 'org.junit', name: 'junit-bom', version: '5.7.2')
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
     testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+}
+
+publishing
+{
+    publications {
+        mavenJava(MavenPublication) {
+            artifactId 'gdb-jvm'
+            from components.java
+        }
+    }
 }
 
 test.configure
