--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
+# Gradle local cache
 .gradle
-/build/
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# IDEA local cache
+.idea
+
+# Gradle build output
+**/build/
+
+# Gradle build properties
+gradle.properties
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
