--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,8 +22,7 @@ dependencies
 publishing
 {
     publications {
-        mavenJava(MavenPublication) {
-            artifactId 'gdb-jvm'
+        maven(MavenPublication) {
             from components.java
         }
     }
